# github_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Todo.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  main.py  models.py
src/routes/: issues.py  webhooks.py
tests/: conftest.py  test_issues.py  test_main.py  test_webhooks.py
