[project]
name = "github-service"
version = "0.1.0"
description = "FastAPI wrapper for GitHub REST API for issues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "integration"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
norecursedirs = ["docs", "build"]
cache_dir = ".pytest_cache"

